--- a/Drawit/app/src/main/res/values/strings.xml
+++ b/Drawit/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Drawit</string>
+    <string name="welcome_to_drawit">Welcome to Drawit!</string>
 </resources>
