--- a/Drawit/app/src/main/res/values/strings.xml
+++ b/Drawit/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="size">Size:</string>
     <string name="add">add</string>
     <string name="save">Save</string>
+    <string name="warning">WARNING</string>
+    <string name="warning_message">Would you like to make a new drawing?</string>
+    <string name="ok">OK</string>
     <string-array name="options_array">
         <item>Pen</item>
         <item>Brush</item>
